fixed projects page on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -215,7 +215,6 @@ button:hover {
 }
 
 .languages {
-  width: 50%;
   margin:auto;
 }
 
@@ -584,6 +583,10 @@ li {
   .display h1 span {
     margin-right: -1px;
   }
+
+  .projects-logo-grid {
+    width: 100%;
+  }
   
   .home {
     margin-top: 1rem; /* Significantly reduced to align with other content areas */
@@ -857,7 +860,7 @@ li {
     gap: 0.5rem;
   }
   .projects-logo-grid .logo-container {
-    margin: 0.25rem;
+    padding: 0.25rem;
   }
 
   .sports-logo-grid {
